--- a/清单/code.html
+++ b/清单/code.html
@@ -11,19 +11,18 @@
 <body>
     <script>
 
-        var inorderTraversal = function(root) {
+        var levelOrder = function(root) {
             if(!root) return []
-            // 左 根 右
-            const stk = [],res = []
-            let node = root
-            while(stk.length || node){
-                while(node){
-                    stk.push(node)
-                    node = node.left
+            const q = [root],res = []
+            while(q.length){
+                const levelSize = q.length,levelRes = []
+                for(let i = 0;i<levelSize;i++){
+                    let node = q.shift();
+                    levelRes.push(node.val)
+                    if(node.left) q.push(node.left)
+                    if(node.right) q.push(node.right)
                 }
-                node = stk.pop()
-                res.push(node.val)
-                node = node.right
+                res.push(levelRes)
             }
             return res
         };
