--- a/清单/code.html
+++ b/清单/code.html
@@ -11,17 +11,18 @@
 <body>
     <script>
 
-        var longestConsecutive = function (nums) {
-            const set = new Set(nums)
-            let count = 0
-            for (let num of nums) {
-                if (!set.has(num - 1)) {
-                    let val = num + 1
-                    while (set.has(val)) val++
-                    count = Math.max(count, val - num)
-                }
+        var findDuplicate = function (nums) {
+            let slow = nums[0], fast = nums[nums[0]]
+            while (slow !== fast) {
+                slow = nums[slow]
+                fast = nums[nums[fast]]
             }
-            return count
+            fast = 0
+            while (slow !== fast) {
+                slow = nums[slow]
+                fast = nums[fast]
+            }
+            return slow
         };
 
     </script>
