--- a/清单/code.html
+++ b/清单/code.html
@@ -11,18 +11,28 @@
 <body>
     <script>
 
-        var findDuplicate = function (nums) {
-            let slow = nums[0], fast = nums[nums[0]]
-            while (slow !== fast) {
-                slow = nums[slow]
-                fast = nums[nums[fast]]
+        var threeSum = function (nums) {
+            nums.sort((a, b) => a - b)
+            const res = []
+            for (let i = 0; i < nums.length - 2; i++) {
+                if (i > 0 && nums[i] === nums[i - 1]) continue
+                let left = i + 1, right = nums.length - 1
+                while (left < right) {
+                    const sum = nums[i] + nums[left] + nums[right]
+                    if (sum === 0) {
+                        res.push([nums[i], nums[left], nums[right]])
+                        while (left < right && nums[left] === nums[left + 1]) left++
+                        while (left < right && nums[right] === nums[right - 1]) right--
+                        left++
+                        right--
+                    } else if (sum < 0) {
+                        left++
+                    } else {
+                        right--
+                    }
+                }
             }
-            fast = 0
-            while (slow !== fast) {
-                slow = nums[slow]
-                fast = nums[fast]
-            }
-            return slow
+            return res
         };
 
     </script>
