--- a/清单/code.html
+++ b/清单/code.html
@@ -11,28 +11,19 @@
 <body>
     <script>
 
-        var threeSum = function (nums) {
-            nums.sort((a, b) => a - b)
-            const res = []
-            for (let i = 0; i < nums.length - 2; i++) {
-                if (i > 0 && nums[i] === nums[i - 1]) continue
-                let left = i + 1, right = nums.length - 1
-                while (left < right) {
-                    const sum = nums[i] + nums[left] + nums[right]
-                    if (sum === 0) {
-                        res.push([nums[i], nums[left], nums[right]])
-                        while (left < right && nums[left] === nums[left + 1]) left++
-                        while (left < right && nums[right] === nums[right - 1]) right--
-                        left++
-                        right--
-                    } else if (sum < 0) {
-                        left++
-                    } else {
-                        right--
-                    }
+        var lengthOfLongestSubstring = function (s) {
+            let left = 0, right = 0, count = 0;
+            const window = {}
+            while (right < s.length) {
+                let ch = s[right++]
+                window[ch] = (window[ch] || 0) + 1
+                while (window[ch] > 1) {
+                    let d = s[left++]
+                    window[d]--
                 }
+                count = Math.max(count, right - left)
             }
-            return res
+            return count
         };
 
     </script>
