--- a/清单/code.html
+++ b/清单/code.html
@@ -11,34 +11,21 @@
 <body>
     <script>
 
-        var findAnagrams = function (s, p) {
-            const obj = {}
-            for (let ch of p) {
-                obj[ch] = (obj[ch] || 0) + 1
-            }
-            let left = 0, right = 0, count = 0;
-            const window = {}, res = [], len = Object.keys(obj).length
-            while (right < s.length) {
-                const c = s[right++]
-                if (obj[c]) {
-                    window[c] = (window[c] || 0) + 1
-                    if (obj[c] === window[c]) {
-                        count++
-                    }
+        var permute = function (nums) {
+            const res = []
+            function backTrack(path) {
+                if (path.length === nums.length) {
+                    res.push([...path])
                 }
-                while (right - left === p.length) {
-                    if (count === len) {
-                        res.push(left)
-                    }
-                    const d = s[left++]
-                    if (obj[d]) {
-                        if (window[d] === obj[d]) {
-                            count--
-                        }
-                        window[d]--
+                for (let num of nums) {
+                    if (!path.includes(num)) {
+                        path.push(num)
+                        backTrack(path)
+                        path.pop()
                     }
                 }
             }
+            backTrack([])
             return res
         };
 
