--- a/清单/code.html
+++ b/清单/code.html
@@ -11,13 +11,17 @@
 <body>
     <script>
 
-        var climbStairs = function (n) {
-            if (n < 3) return n
-            let a = 1, b = 2;
-            for (let i = 3; i <= n; i++) {
-                [a, b] = [b, a + b]
+        var longestCommonPrefix = function (strs) {
+            let prefix = strs[0]
+            for (let i = 1; i < strs.length; i++) {
+                while (strs[i].indexOf(prefix) !== 0) {
+                    prefix = prefix.substring(0, prefix.length - 1)
+                    if (prefix === '') {
+                        return ''
+                    }
+                }
             }
-            return b
+            return prefix
         };
 
     </script>
