--- a/清单/code.html
+++ b/清单/code.html
@@ -11,21 +11,22 @@
 <body>
     <script>
 
-        var mergeTwoLists = function (list1, list2) {
-            const dummy = new ListNode()
-            let curr = dummy
-            while (list1 && list2) {
-                if (list1.val > list2.val) {
-                    curr.next = list2
-                    list2 = list2.next
-                } else {
-                    curr.next = list1
-                    list1 = list1.next
-                }
+        var rotateRight = function (head, k) {
+            if (!head || !head.next || k === 0) return head
+            let curr = head, len = 1
+            while (curr.next) {
                 curr = curr.next
+                len++
             }
-            curr.next = list1 ? list1 : list2
-            return dummy.next
+            curr.next = head
+            const step = len - k % len
+            let newCurr = head
+            for (let i = 1; i < step; i++) {
+                newCurr = newCurr.next
+            }
+            let newHead = newCurr.next
+            newCurr.next = null
+            return newHead
         };
 
     </script>
