--- a/清单/code.html
+++ b/清单/code.html
@@ -11,23 +11,24 @@
 <body>
     <script>
 
-        var rotateRight = function (head, k) {
-            if (!head || !head.next || k === 0) return head
-            let curr = head, len = 1
-            while (curr.next) {
-                curr = curr.next
-                len++
+        // 快速排序，选择基准元素，左右分区
+
+        function quickSort(arr) {
+            if (arr.length < 2) return arr
+            const len = arr.length - 1
+            let pivot = arr[len]
+            const left = [], right = []
+            for (let i = 0; i < len; i++) {
+                if (arr[i] < pivot) {
+                    left.push(arr[i])
+                } else {
+                    right.push(arr[i])
+                }
             }
-            curr.next = head
-            const step = len - k % len
-            let newCurr = head
-            for (let i = 1; i < step; i++) {
-                newCurr = newCurr.next
-            }
-            let newHead = newCurr.next
-            newCurr.next = null
-            return newHead
-        };
+            return [...quickSort(left), pivot, ...quickSort(right)]
+        }
+        const arr = [1, 10, 100, 25, 1, 2, 3, 5, 4, 4]
+        console.log(quickSort(arr));
 
     </script>
 </body>
