--- a/清单/code.html
+++ b/清单/code.html
@@ -11,25 +11,18 @@
 <body>
     <script>
 
-        // 快速排序，选择基准元素，左右分区
-
-        function quickSort(arr) {
-            if (arr.length < 2) return arr
-            const len = arr.length - 1
-            let pivot = arr[len]
-            const left = [], right = []
-            for (let i = 0; i < len; i++) {
-                if (arr[i] < pivot) {
-                    left.push(arr[i])
-                } else {
-                    right.push(arr[i])
+        var groupAnagrams = function (strs) {
+            const obj = {}
+            for (let s of strs) {
+                const ch = s.split('').sort().join('')
+                if (!obj[ch]) {
+                    obj[ch] = []
                 }
+                obj[ch].push(s)
             }
-            return [...quickSort(left), pivot, ...quickSort(right)]
-        }
-        const arr = [1, 10, 100, 25, 1, 2, 3, 5, 4, 4]
-        console.log(quickSort(arr));
-
+            console.log(obj);
+            return Object.values(obj)
+        };
     </script>
 </body>
 
