--- a/清单/code.html
+++ b/清单/code.html
@@ -11,18 +11,23 @@
 <body>
     <script>
 
-        var groupAnagrams = function (strs) {
-            const obj = {}
-            for (let s of strs) {
-                const ch = s.split('').sort().join('')
-                if (!obj[ch]) {
-                    obj[ch] = []
+        var rightSideView = function (root) {
+            if (!root) return []
+            const q = [root], res = []
+            while (q.length) {
+                const len = q.length;
+                for (let i = 0; i < len; i++) {
+                    const node = q.shift()
+                    if (i === len - 1) {
+                        res.push(node.val)
+                    }
+                    if (node.left) q.push(node.left)
+                    if (node.right) q.push(node.right)
                 }
-                obj[ch].push(s)
             }
-            console.log(obj);
-            return Object.values(obj)
+            return res
         };
+
     </script>
 </body>
 
