--- a/清单/code.html
+++ b/清单/code.html
@@ -11,21 +11,17 @@
 <body>
     <script>
 
-        var rightSideView = function (root) {
-            if (!root) return []
-            const q = [root], res = []
-            while (q.length) {
-                const len = q.length;
-                for (let i = 0; i < len; i++) {
-                    const node = q.shift()
-                    if (i === len - 1) {
-                        res.push(node.val)
-                    }
-                    if (node.left) q.push(node.left)
-                    if (node.right) q.push(node.right)
-                }
+        // 前序遍历，遍历过程中翻转左子树和右子树
+        var invertTree = function (root) {
+            if (!root) return root
+            const stk = [root]
+            while (stk.length) {
+                const node = stk.pop();
+                [node.left, node.right] = [node.right, node.left]
+                if (node.right) stk.push(node.right)
+                if (node.left) stk.push(node.left)
             }
-            return res
+            return root
         };
 
     </script>
