--- a/清单/code.html
+++ b/清单/code.html
@@ -11,17 +11,19 @@
 <body>
     <script>
 
-        // 插入排序
-        function insertSort(arr) {
-            for (let i = 1; i < arr.length; i++) {
-                for (let j = i; j > 0 && arr[j] < arr[j - 1]; j--) {
-                    [arr[j], arr[j - 1]] = [arr[j - 1], arr[j]]
-                }
-            }
-            return arr
-        }
-
-        console.log(insertSort([100, 500, 20, 1, 300, 900]));
+        // 前序 中序
+        // 根 左 右
+        // 左 根 右
+        // 从前序取得根 从中序取左右
+        var buildTree = function (preorder, inorder) {
+            if (!preorder.length || !inorder.length) return null
+            const rootVal = preorder[0]
+            const index = inorder.indexOf(rootVal)
+            const root = new TreeNode(rootVal)
+            root.left = buildTree(preorder.slice(1, index + 1), inorder.slice(0, index))
+            root.right = buildTree(preorder.slice(index + 1), inorder.slice(index + 1))
+            return root
+        };
 
     </script>
 </body>
