--- a/清单/code.html
+++ b/清单/code.html
@@ -11,23 +11,17 @@
 <body>
     <script>
 
-        var longestPalindrome = function (s) {
-            let res = ''
-            for (let i = 0; i < s.length; i++) {
-                let odd = expandCenter(s, i, i)
-                let even = expandCenter(s, i, i + 1)
-                res = res.length > odd.length ? res : odd
-                res = res.length > even.length ? res : even
+        var twoSum = function (nums, target) {
+            const obj = {}
+            for (let i = 0; i < nums.length; i++) {
+                const num = target - nums[i]
+                if (obj[num] !== undefined) {
+                    return [obj[num], i]
+                }
+                obj[nums[i]] = i
             }
-            return res
         };
-        function expandCenter(s, left, right) {
-            while (left >= 0 && right < s.length && s[left] === s[right]) {
-                left--
-                right++
-            }
-            return s.substring(left + 1, right)
-        }
+
     </script>
 </body>
 
