--- a/清单/code.html
+++ b/清单/code.html
@@ -11,19 +11,19 @@
 <body>
     <script>
 
-        var maxArea = function (height) {
-            let left = 0, right = height.length - 1, maxCount = 0;
-            while (left < right) {
-                const width = right - left;
-                const hight = Math.min(height[left], height[right])
-                maxCount = Math.max(maxCount, width * hight)
-                if (height[left] < height[right]) {
-                    left++
-                } else {
-                    right--
+        var lengthOfLongestSubstring = function (s) {
+            let left = 0, right = 0, maxLen = 0;
+            const window = {}
+            while (right < s.length) {
+                const ch = s[right++]
+                window[ch] = (window[ch] || 0) + 1
+                while (window[ch] > 1) {
+                    const d = s[left++]
+                    window[d]--
                 }
+                maxLen = Math.max(maxLen, right - left)
             }
-            return maxCount
+            return maxLen
         };
 
     </script>
