--- a/清单/code.html
+++ b/清单/code.html
@@ -11,18 +11,13 @@
 <body>
     <script>
 
-        var subarraySum = function (nums, k) {
-            let preSum = 0, count = 0;
-            const map = new Map()
-            map.set(0, 1)
-            for (let num of nums) {
-                preSum += num
-                if (map.has(preSum - k)) {
-                    count += map.get(preSum - k)
-                }
-                map.set(preSum, (map.get(preSum) || 0) + 1)
+        var maxSubArray = function (nums) {
+            let sum = nums[0], maxSum = nums[0];
+            for (let i = 1; i < nums.length; i++) {
+                sum = Math.max(nums[i], nums[i] + sum)
+                maxSum = Math.max(sum, maxSum)
             }
-            return count
+            return maxSum
         };
 
     </script>
